<resources>
    <string name="app_name">Songle</string>
    <string name="title_activity_maps">Map</string>
    <string name="statistics">Statistics</string>
    <string name="title">Songle</string>
    <string name="help">&#8226; Walk up to <font color='#FFC107'>markers</font> <br />
&#8226; Collect <font color='#FFC107'>words</font> <br />
&#8226; Guess the <font color='#FFC107'>song</font> <br />
&#8226; Be <font color='#FFC107'>quick</font> and <font color='#FFC107'>picky</font> <br />
&#8226; Get the best <font color='#FFC107'>score</font> <br />
&#8226; If stuck, <font color='#FFC107'>restart</font> <br />
&#8226; Try to find the <font color='#ff0000'>treasure</font> :)</string>
    <string name="listView">List</string>
    <string name="countView">Count</string>
    <string name="newWord">You found a new word!</string>
    <string name="placeTemplate">[, ]</string>
    <string name="wordTemplate">word</string>
    <string name="giveUp">Too hard?</string>
    <string name="welcome">Welcome to Songle!</string>
    <string name="gl">Good luck!</string>
    <string name="bestScore">Best score</string>
    <string name="noGames">Games played</string>
    <string name="noWins">Games won</string>
    <string name="totalTime">Total time in game</string>
    <string name="averageScore">Average score per round</string>
    <string name="lastScore">Last game score</string>
    <string name="diffNone">Difficulty</string>
    <string name="diffCakewalk">Cakewalk</string>
    <string name="diffEasy">Easy</string>
    <string name="diffMedium">Medium</string>
    <string name="diffHard">Hard</string>
    <string name="diffVeryhard">Very hard</string>
    <string name="chooseDiff">Choose Difficulty</string>
    <string name="timer">mm:ss</string>
    <string name="minuteTime">%1$s:%2$s</string>
    <string name="hourTime">%1$s:%2$s:%3$s</string>
    <string name="win">You win!</string>
    <string name="lose">You lose</string>
    <string name="songInfo">%1$s - %2$s</string>
    <string name="playAgain">Play again</string>
    <string name="zero">0</string>
    <string name="zeroTime">00:00</string>
    <string name="winTimeText">Time</string>
    <string name="winPointsText">Points</string>
    <string name="winGuessesText">Guesses</string>
    <string name="stopPlaying">That\'s enough</string>
    <string name="changeDiff">Make it easier</string>
    <string name="givingUp">Way too hard</string>
    <string name="idea">Guess</string>
    <string name="treasureDesc">Treasure</string>
    <string name="wannaPlay">Wanna play?</string>
    <string name="startPlaying">Let\'s do it</string>
    <string name="LETSGO">Let\'s go!</string>
    <string name="maxPoints">Max points: %1$d</string>
    <string name="wordsOnMap">Words on the map: %1$d%%</string>
    <string name="wordTypes">Word types: %1$d</string>
    <string name="songTitle">Enter song title</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <!--region Downloading-->
    <string name="lyricsStart">Lyrics download start: %1$d</string>
    <string name="lyricsEnd">Lyrics download complete: %1$d</string>
    <string name="mapStart">Map download start: song %1$d, map %2$d</string>
    <string name="mapEnd">Map download complete: song %1$d, map %2$d</string>
    <string name="downloadCompleted">All downloads complete</string>
    <!--endregion-->
</resources>
