<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mainDiffView"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseDiff"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"/>

    <!--TODO: Change to scrollable list-->
    <Button
        android:id="@+id/btnCakewalk"
        android:layout_width="70dp"
        android:alpha="0.3"
        android:textSize="5sp"
        android:textColor="@color/colorPrimary"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@id/btnEasy"
        android:layout_marginBottom="-3dp"
        android:text="@string/diffCakewalk"/>

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="120dp"
        android:alpha="0.7"
        android:textSize="13sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@+id/btnMedium"
        android:layout_marginBottom="-3dp"
        android:text="@string/diffEasy"/>

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="150dp"
        android:alpha="1"
        android:textSize="17sp"
        android:textColor="@color/colorAccent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/diffMedium"/>

    <Button
        android:id="@+id/btnHard"
        android:layout_width="120dp"
        android:alpha="0.7"
        android:textSize="13sp"
        android:textColor="#ff0000"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/btnMedium"
        android:layout_marginTop="-3dp"
        android:text="@string/diffHard"/>

    <Button
        android:id="@+id/btnVHard"
        android:layout_width="70dp"
        android:alpha="0.3"
        android:textSize="5sp"
        android:textColor="#aa0000"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/btnHard"
        android:layout_marginTop="-3dp"
        android:text="@string/diffVeryhard"/>

</android.widget.LinearLayout>