<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainWinView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textWinInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/win"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:paddingTop="5dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/songInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSecondaryText"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:rowCount="2">

        <TextView
            android:text="@string/winTimeText"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:layout_row="0" />

        <TextView
            android:id="@+id/totalTime"
            android:text="@string/zeroTime"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:layout_row="1"
            android:padding="5dp" />

        <TextView
            android:text="@string/winPointsText"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1.3"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:id="@+id/totalPoints"
            android:text="@string/zero"
            android:layout_width="0dp"
            android:textColor="@color/colorAccent"
            android:textSize="55sp"
            android:textStyle="bold"
            android:layout_columnWeight="1.3"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:gravity="center" />

        <TextView
            android:text="@string/winGuessesText"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1"
            android:layout_column="2"
            android:layout_row="0" />

        <TextView
            android:id="@+id/totalGuesses"
            android:text="@string/zero"
            android:layout_width="0dp"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:gravity="center" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/yes_rectangle"
            android:text="@string/playAgain"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/stopPlayingButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/no_rectangle"
            android:text="@string/stopPlaying"
            android:textColor="#bf0000"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="start"
            android:layout_column="1"
            android:layout_columnWeight="1"/>
    </GridLayout>
</LinearLayout>