<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainStatView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:padding="5dp"
        android:gravity="center_horizontal" />

    <GridLayout
        android:id="@+id/statGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="6"
        android:columnCount="2"
        android:layout_margin="30dp" >

        <TextView
            android:id="@+id/textBestScore"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/bestScore"
            android:layout_gravity="start"
            android:padding="3dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/statBestScore"
            android:layout_row="0"
            android:layout_column="1"
            android:text="0"
            android:layout_gravity="end"
            android:padding="3dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/textGamesPlayed"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/noGames"
            android:layout_gravity="start"
            android:padding="3dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/statGamesPlayed"
            android:layout_row="1"
            android:layout_column="1"
            android:text="0"
            android:layout_gravity="end"
            android:padding="3dp"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/textGamesWon"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/noWins"
            android:layout_gravity="start"
            android:padding="3dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/statGamesWon"
            android:layout_row="2"
            android:layout_column="1"
            android:text="0"
            android:layout_gravity="end"
            android:padding="3dp"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/textTimeInGame"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/totalTime"
            android:layout_gravity="start"
            android:padding="3dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/statTimeInGame"
            android:layout_row="3"
            android:layout_column="1"
            android:text="0"
            android:layout_gravity="end"
            android:padding="3dp"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/textAverageScore"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/averageScore"
            android:layout_gravity="start"
            android:padding="3dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/statAverageScore"
            android:layout_row="4"
            android:layout_column="1"
            android:text="0"
            android:layout_gravity="end"
            android:padding="3dp"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/textLastGameScore"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/lastScore"
            android:layout_gravity="start"
            android:padding="3dp"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/statLastGameScore"
            android:layout_row="5"
            android:layout_column="1"
            android:text="0"
            android:layout_gravity="end"
            android:padding="3dp"
            android:layout_columnWeight="1"/>
    </GridLayout>

</LinearLayout>